tests/errors/erro_func_arg_count.lua
function void foo(a: integer, b: integer)
    print(a + b);
end

function void main()
    foo(10); -- Erro: falta argumento
end
